Projects/פרוייקט אמצע/vpc.tf
#VPC
resource "aws_vpc" "project-vpc" {
  cidr_block = "10.0.0.0/16"
  tags       = { Name = "project-vpc" }
}
